--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/register": "^7.13.14",
     "@babel/runtime": "^7.13.10",
+    "chai": "^4.3.4",
+    "coveralls": "^3.1.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
+    "sinon-chai": "^3.6.0",
+    "supertest": "^6.1.3"
   }
 }
