--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "pretty": "prettier --write '**/*.{js,json}' 'node_modules/**'",
     "postpretty": "yarn lint --fix",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register",
-    "runQuery": "babel-node ./src/utils/runQuery"
+    "runQuery": "babel-node ./src/utils/runQuery",
+	"coverage": "nyc report --reporter=text-lcov | coveralls"
+	
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
